2008-09-13  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble-machine-code): update for the
	2008-09-10 change: SHELL on success returns NIL

2008-09-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (HSDEFAULT): "http://www.lisp.org/HyperSpec" is dead,
	use "http://www.ai.mit.edu/projects/iiip/doc/CommonLISP/HyperSpec"
	* configure: adjust the help message

2008-09-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (SHELL) [WIN32_NATIVE]: return NIL on success and
	exitcode on failure, just like on Unix and as documented
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>
	(EXECUTE) [UNIX]: use WEXITSTATUS et al to parse status

2008-09-02  Sam Steingold  <sds@gnu.org>

	* error.d (%DEFCLCS): use symbol_tab instead of symbol_tab_data
	to support TYPECODES on 32 bit platforms
	Reported by Vladimir Tzankov <vtzankov@gmail.com>

2008-09-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use $(RUN) instead of lisp.run
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-08-25  Bruno Haible  <bruno@clisp.org>

	* configure (SIGSEGV): Set to libsigsegv-2.6.

2008-08-24  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler_continuation): New function,
	extracted from stackoverflow_handler.
	(stackoverflow_handler): Invoke it. Adapt to sigsegv_leave_handler API
	change in libsigsegv-2.6.

2008-08-21  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp (DBusMessageIter): c-struct, not c-pointer

2008-08-21  Sam Steingold  <sds@gnu.org>

	* foreign.d (foreign_with_pointers_p): support inttypes (return false)

2008-08-20  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (I_to_ulong, I_to_slong): define regardless of
	HAVE_FFI for the sake of the syscalls module
	* modules/syscalls/calls.c (%SETHOSTID): sethostid does not return
	a value on *BSD, use errno to check for errors
	Reported by José H. Espinosa <jose.h.espinosa@gmail.com>

2008-08-20  Sam Steingold  <sds@gnu.org>
