@@ -3101,7 +3101,10 @@ if [ $CROSS = false ] ; then
   echotab "test \`echo '(princ (+ 11 99))' | \$(RUN) -q -M lispinit.mem -\` = 110 || exit 1"
   TRCRLF="tr '\n' '_' | tr -d '\r'"
   echotab "test \"\`echo '(+ foo bar)' | \$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl | ${TRCRLF}\`\" = '99_[1]> _110_' || exit 1"
-  echotab "echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' | \$(RUN) -q -M lispinit.mem -; test \$\$? = 42 || exit 1"
+  if [ "$HOS" != win32 ]; then # woe32 has unpredictable exit codes
+    # http://article.gmane.org/gmane.lisp.clisp.devel/18967
+    echotab "echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' | \$(RUN) -q -M lispinit.mem -; test \$\$? = 42 || exit 1"
+  fi
   echotab "test \`echo '(setf (stream-element-type *standard-output*) (quote (unsigned-byte 8))) (write-sequence (convert-string-to-bytes \"42\" charset:ascii) *standard-output*) (setf (stream-element-type *standard-output*) (quote character)) (terpri)' | \$(RUN) -q -M lispinit.mem - | cat\` = 42 || exit 1"
   echotab "\$(RM) script.lisp; echo '(+ 11 99)' > script.lisp"
   echotab "test \`\$(RUN) -q -M lispinit.mem < script.lisp\` = 110 || exit 1"
@@ -3112,9 +3115,12 @@ if [ $CROSS = false ] ; then
   # "-x with lisp-file is invalid"
   # echotab "\$(RM) script.lisp; echo '(princ (+ foo bar))' > script.lisp"
   # echotab "test \`\$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl script.lisp | ${TRCRLF}\` = 99_110_ || exit 1"
-  echotab "\$(RM) script.lisp; echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' > script.lisp"
-  echotab "\$(RUN) -q -M lispinit.mem < script.lisp; test \$\$? = 42 || exit 1"
-  echotab "\$(RUN) -q -M lispinit.mem script.lisp; test \$\$? = 42 || exit 1"
+  if [ "$HOS" != win32 ]; then # woe32 has unpredictable exit codes
+    # http://article.gmane.org/gmane.lisp.clisp.devel/18967
+    echotab "\$(RM) script.lisp; echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' > script.lisp"
+    echotab "\$(RUN) -q -M lispinit.mem < script.lisp; test \$\$? = 42 || exit 1"
+    echotab "\$(RUN) -q -M lispinit.mem script.lisp; test \$\$? = 42 || exit 1"
+  fi
   echotab "\$(RM) script.lisp; echo '(setf (stream-element-type *standard-output*) (quote (unsigned-byte 8))) (write-sequence (convert-string-to-bytes \"42\" charset:ascii) *standard-output*) (setf (stream-element-type *standard-output*) (quote character)) (terpri)' > script.lisp"
   # ??? echotab "test \`\$(RUN) -q -M lispinit.mem < script.lisp | cat\` = 42 || exit 1"
   echotab "test \`\$(RUN) -q -M lispinit.mem script.lisp | cat\` = 42 || exit 1"
