@@ -1,3 +1,10 @@
+2008-09-15  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (check-script) [win32]: disable $? tests because
+	%ERRORLEVEL% on woe32 can be reset to 0 all of a sudden
+	http://article.gmane.org/gmane.lisp.clisp.devel/18967
+	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>
+
 2008-09-13  Sam Steingold  <sds@gnu.org>
 
 	* disassem.lisp (disassemble-machine-code): update for the
